--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@next/font": "13.1.1",
+    "@supabase/auth-helpers-nextjs": "^0.5.2",
+    "@supabase/supabase-js": "^2.4.0",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
@@ -18,6 +20,10 @@
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "server-only": "^0.0.1",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "encoding": "^0.1.13"
   }
 }
