--- a/package.json
+++ b/package.json
@@ -1,29 +1,30 @@
 {
-  "name": "next13-auth-helpers",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@next/font": "13.1.1",
-    "@supabase/auth-helpers-nextjs": "^0.5.2",
-    "@supabase/supabase-js": "^2.4.0",
-    "@types/node": "18.11.18",
-    "@types/react": "18.0.26",
-    "@types/react-dom": "18.0.10",
-    "eslint": "8.31.0",
-    "eslint-config-next": "13.1.1",
-    "next": "13.1.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "server-only": "^0.0.1",
-    "typescript": "4.9.4"
-  },
-  "devDependencies": {
-    "encoding": "^0.1.13"
-  }
+	"name": "next13-auth-helpers",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@next/font": "13.1.1",
+		"@supabase/auth-helpers-nextjs": "^0.5.4",
+		"@supabase/supabase-js": "^2.4.0",
+		"@tanstack/react-query": "^4.22.0",
+		"@types/node": "18.11.18",
+		"@types/react": "18.0.26",
+		"@types/react-dom": "18.0.10",
+		"eslint": "8.31.0",
+		"eslint-config-next": "13.1.1",
+		"next": "13.1.1",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"server-only": "^0.0.1",
+		"typescript": "4.9.4"
+	},
+	"devDependencies": {
+		"encoding": "^0.1.13"
+	}
 }
