--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
 		"@next/font": "13.1.1",
 		"@supabase/auth-helpers-nextjs": "^0.5.4",
 		"@supabase/supabase-js": "^2.4.0",
+		"@swc-jotai/react-refresh": "^0.0.4",
 		"@tanstack/react-query": "^4.22.0",
 		"@types/node": "18.11.18",
 		"@types/react": "18.0.26",
 		"@types/react-dom": "18.0.10",
 		"eslint": "8.31.0",
 		"eslint-config-next": "13.1.1",
+		"jotai": "^2.0.2",
 		"next": "13.1.1",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
@@ -25,6 +27,7 @@
 		"typescript": "4.9.4"
 	},
 	"devDependencies": {
-		"encoding": "^0.1.13"
+		"encoding": "^0.1.13",
+		"supabase": "^1.38.6"
 	}
 }
